kustomize/fin/gateway/overlays/prod-libk8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
    - name: service
      port: 3000
      protocol: TCP
      targetPort: 3000
