kustomize/fin/gateway/overlays/prod-libk8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "public-ingress"
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: public-ingress
  tls:
    - hosts:
        - libk8s-prod.dams.library.ucdavis.edu
      secretName: dams-wildcard-tls
    - hosts:
        - digital.ucdavis.edu
      secretName: dams-tls
  rules:
    - host: libk8s-prod.dams.library.ucdavis.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 3000
    - host: digital.ucdavis.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 3000
